add code challenges

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
+    <!-- <span id="name">Joseph</span> -->
     <div class="container">
-        <button onclick="runFunction()">Click Me</button>
+        <button>Click Me</button>
     </div>
-    <script src="scripts/index.js"></script>
+    <script></script>
 </body>
 
 </html>
