--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 
 <body>
-    <!-- <span id="name">Joseph</span> -->
-    <div class="container">
-        <button>Click Me</button>
-    </div>
-    <script></script>
+    <h1 id="heading">Welcome to Week 4</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.</p>
+        <button onclick="stop()">STOP</button>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
